## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = sudoku-cpp

sudoku_cpp_SOURCES = \
	main.cc     \
	SudokuGrid.cxx     \
	SudokuGrid.h

sudoku_cpp_LDFLAGS = 

sudoku_cpp_LDADD = 

